# bit_swap_torrent

./: Cargo.toml  README.md  ornek-dosya.txt  ornek-dosya.txt.bwt
crates/bit-swap-cli/: Cargo.toml
crates/bit-swap-cli/src/: main.rs
crates/bit-swap-core/: Cargo.toml
crates/bit-swap-core/src/: crypto.rs  dht.rs  error.rs  lib.rs  metadata.rs  peer.rs  protocol.rs  scheduler.rs  storage.rs  transport.rs
php-backend/: README.md  index.php
php-backend/api/: download.php  files.php  upload.php
php-backend/config/: database.php
python-server/: server.py
simple-server/: app.py
web-ui/: index.html  script.js  styles.css
working-server/: server.py
