[workspace]
members = [
    "crates/bit-swap-core",
    "crates/bit-swap-cli"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# P2P networking
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "dns",
    "websocket",
    "noise",
    "yamux",
    "kad",
    "identify",
    "ping",
    "mdns",
    "request-response",
    "gossipsub"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Storage
sled = "0.34"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
bytes = "1.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
