[package]
name = "bit-swap-cli"
version = "0.1.0"
edition = "2021"
authors = ["BitSwapTorrent Team"]
description = "Command line interface for BitSwapTorrent"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitswaptorrent/bitswaptorrent"

[[bin]]
name = "bwt"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

# Local dependencies
bit-swap-core = { path = "../bit-swap-core" }
